--- a/frontend/pages/dangki.html
+++ b/frontend/pages/dangki.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Band</title>
     <link rel="stylesheet" href="../assets/css/dangki.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="../assets/font/themify-icons/themify-icons.css">
 
 </head>
+
 <body>
     <div id="main">
         <div id="t3-header">
@@ -30,7 +34,8 @@
 
             </div>
             <div class="dangxuat">
-                <button onclick="window.location.href='dangnhap.html'" class="t1-dangxuat t1-nut-hover">Đăng Nhập</button>
+                <button onclick="window.location.href='dangnhap.html'" class="t1-dangxuat t1-nut-hover">Đăng
+                    Nhập</button>
             </div>
 
         </div>
@@ -44,11 +49,13 @@
                     </div>
                     <div class="t5-lienhe-name lienhe-chung text-name-tkhoan">
                         <label style="font-weight: 600;font-size: 14px;" for="email">Email</label>
-                        <input name="email" class="textchung" type="email" id="email" placeholder="example.email@gmail.com">
+                        <input name="email" class="textchung" type="email" id="email"
+                            placeholder="example.email@gmail.com">
                     </div>
                     <div class="t5-lienhe-name lienhe-chung text-name-tkhoan">
                         <label style="font-weight: 600;font-size: 14px;" for="phone_number">Số điện thoại</label>
-                        <input name="phone_number" class="textchung" type="text" id="phone_number" placeholder="số điện thoại">
+                        <input name="phone_number" class="textchung" type="text" id="phone_number"
+                            placeholder="số điện thoại">
                     </div>
                     <div class="t5-lienhe-name lienhe-chung text-name-tkhoan">
                         <label style="font-weight: 600;font-size: 14px;" for="address">Địa chỉ</label>
@@ -60,12 +67,15 @@
                     </div>
                     <div class="t5-lienhe-tkhoan lienhe-chung text-name-tkhoan">
                         <label style="font-weight: 600;font-size: 14px;" for="password">MẬT KHẨU</label>
-                        <input name="password" class="textchung" type="password" id="password" placeholder="Enter at least 8+ characters">
+                        <input name="password" class="textchung" type="password" id="password"
+                            placeholder="Enter at least 8+ characters">
                     </div>
 
                     <div class="t5-lienhe-tkhoan lienhe-chung text-name-tkhoan">
-                        <label style="font-weight: 600;font-size: 14px;" for="validatePassword">NHẬP LẠI MẬT KHẨU</label>
-                        <input class="textchung" type="password" id="validatePassword" placeholder="Enter at least 8+ characters">
+                        <label style="font-weight: 600;font-size: 14px;" for="validatePassword">NHẬP LẠI MẬT
+                            KHẨU</label>
+                        <input class="textchung" type="password" id="validatePassword"
+                            placeholder="Enter at least 8+ characters">
                     </div>
 
                     <div class="t5-lienhe-submid lienhe-chung ">
@@ -95,20 +105,22 @@
                     <h2 class="titlee">Liên kết với chúng tôi</h2>
                     <ul class="list-lienket">
                         <li class="lienket-item">
-                            <span class="ti-facebook"  style="color: white;"></span>
+                            <span class="ti-facebook" style="color: white;"></span>
                             <a href="https://www.facebook.com/nguyen.manh.dung.283177/">Facebook</a>
                         </li>
                         <li class="lienket-item">
-                            <span class="ti-instagram"  style="color: white;"></span>
+                            <span class="ti-instagram" style="color: white;"></span>
                             <a href="https://www.instagram.com/nmdung_3114/">Instagram</a>
                         </li>
                         <li class="lienket-item">
-                            <span class="ti-youtube"  style="color: white;"></span>
+                            <span class="ti-youtube" style="color: white;"></span>
                             <a href="https://www.youtube.com/@DungNguyen-ys7cl">Youtube</a>
                         </li>
                         <li class="lienket-item">
                             <span class="ti-email" style="color: white;"></span>
-                            <a href="https://myaccount.google.com/?hl=vi&utm_source=OGB&utm_medium=act&gar=WzEyMF0&nlr=1">gmail: manhdung2724@gmail.com</a>
+                            <a
+                                href="https://myaccount.google.com/?hl=vi&utm_source=OGB&utm_medium=act&gar=WzEyMF0&nlr=1">gmail:
+                                manhdung2724@gmail.com</a>
                         </li>
                     </ul>
 
@@ -116,7 +128,10 @@
                 <div class="map">
                     <div class="khungmap">
                         <h2 class="title-map">Google map</h2>
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d14898.969029177668!2d105.79476479999998!3d21.0029664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1zLA!5e0!3m2!1svi!2s!4v1744738471336!5m2!1svi!2s" width="100%" height="100%" style="border-radius: 10px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d14898.969029177668!2d105.79476479999998!3d21.0029664!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1zLA!5e0!3m2!1svi!2s!4v1744738471336!5m2!1svi!2s"
+                            width="100%" height="100%" style="border-radius: 10px;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
 
                 </div>
@@ -124,40 +139,48 @@
                     <h2 class="titlee-dc">Hệ thống cửa hàng</h2>
                     <div class="dchi-cuthe">
                         <ul class="diachi-list">
-                            <li class="diachi-item" data-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3725.180603220392!2d105.79645487503025!3d20.985396380653157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ad98a6e3139b%3A0xb5d65ac63927cf5a!2sTocotoco!5e0!3m2!1svi!2s!4v1744722386850!5m2!1svi!2s">
+                            <li class="diachi-item"
+                                data-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3725.180603220392!2d105.79645487503025!3d20.985396380653157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ad98a6e3139b%3A0xb5d65ac63927cf5a!2sTocotoco!5e0!3m2!1svi!2s!4v1744722386850!5m2!1svi!2s">
                                 Trà Sữa ToCoToCo Thanh Xuân
                             </li>
 
 
-                            <li class="diachi-item" data-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.91671232389!2d105.81229357503044!3d20.995975480645157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ad2624f9202d%3A0xaeb77f2425a2c642!2sToco%20toco!5e0!3m2!1svi!2s!4v1744722152752!5m2!1svi!2s">
+                            <li class="diachi-item"
+                                data-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.91671232389!2d105.81229357503044!3d20.995975480645157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ad2624f9202d%3A0xaeb77f2425a2c642!2sToco%20toco!5e0!3m2!1svi!2s!4v1744722152752!5m2!1svi!2s">
                                 Trà Sữa ToCoToCo Thượng Đình
 
                             </li>
 
 
-                            <li class="diachi-item" data-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.6377741151164!2d105.7908376750308!3d21.00715228063678!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135aca8b1e8e9fb%3A0xa50a6c36b7820da9!2zVHLDoCBT4buvYSBUb0NvVG9DbyBCaWcgQyBUaMSDbmcgTG9uZw!5e0!3m2!1svi!2s!4v1744722194277!5m2!1svi!2s">
+                            <li class="diachi-item"
+                                data-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3724.6377741151164!2d105.7908376750308!3d21.00715228063678!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135aca8b1e8e9fb%3A0xa50a6c36b7820da9!2zVHLDoCBT4buvYSBUb0NvVG9DbyBCaWcgQyBUaMSDbmcgTG9uZw!5e0!3m2!1svi!2s!4v1744722194277!5m2!1svi!2s">
                                 Trà Sữa ToCoToCo Big C Thăng Long
 
                             </li>
 
 
-                            <li class="diachi-item" data-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3725.180603220392!2d105.79645487503025!3d20.985396380653157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ad98a6e3139b%3A0xb5d65ac63927cf5a!2sTocotoco!5e0!3m2!1svi!2s!4v1744722386850!5m2!1svi!2s">
+                            <li class="diachi-item"
+                                data-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3725.180603220392!2d105.79645487503025!3d20.985396380653157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ad98a6e3139b%3A0xb5d65ac63927cf5a!2sTocotoco!5e0!3m2!1svi!2s!4v1744722386850!5m2!1svi!2s">
                                 Trà Sữa ToCoToCo Nguyễn Quý Đức
 
                             </li>
-                            <li class="diachi-item" data-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3725.180603220392!2d105.79645487503025!3d20.985396380653157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ad98a6e3139b%3A0xb5d65ac63927cf5a!2sTocotoco!5e0!3m2!1svi!2s!4v1744722386850!5m2!1svi!2s">
+                            <li class="diachi-item"
+                                data-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3725.180603220392!2d105.79645487503025!3d20.985396380653157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ad98a6e3139b%3A0xb5d65ac63927cf5a!2sTocotoco!5e0!3m2!1svi!2s!4v1744722386850!5m2!1svi!2s">
                                 Trà Sữa ToCoToCo Thành Công
 
                             </li>
-                            <li class="diachi-item" data-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3725.180603220392!2d105.79645487503025!3d20.985396380653157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ad98a6e3139b%3A0xb5d65ac63927cf5a!2sTocotoco!5e0!3m2!1svi!2s!4v1744722386850!5m2!1svi!2s">
+                            <li class="diachi-item"
+                                data-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3725.180603220392!2d105.79645487503025!3d20.985396380653157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ad98a6e3139b%3A0xb5d65ac63927cf5a!2sTocotoco!5e0!3m2!1svi!2s!4v1744722386850!5m2!1svi!2s">
                                 Trà Sữa ToCoToCo Dương Đình Nghệ
 
                             </li>
-                            <li class="diachi-item" data-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3725.180603220392!2d105.79645487503025!3d20.985396380653157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ad98a6e3139b%3A0xb5d65ac63927cf5a!2sTocotoco!5e0!3m2!1svi!2s!4v1744722386850!5m2!1svi!2s">
+                            <li class="diachi-item"
+                                data-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3725.180603220392!2d105.79645487503025!3d20.985396380653157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ad98a6e3139b%3A0xb5d65ac63927cf5a!2sTocotoco!5e0!3m2!1svi!2s!4v1744722386850!5m2!1svi!2s">
                                 Trà Sữa ToCoToCo Trần Duy Hưng
 
                             </li>
-                            <li class="diachi-item" data-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3725.180603220392!2d105.79645487503025!3d20.985396380653157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ad98a6e3139b%3A0xb5d65ac63927cf5a!2sTocotoco!5e0!3m2!1svi!2s!4v1744722386850!5m2!1svi!2s">
+                            <li class="diachi-item"
+                                data-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3725.180603220392!2d105.79645487503025!3d20.985396380653157!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ad98a6e3139b%3A0xb5d65ac63927cf5a!2sTocotoco!5e0!3m2!1svi!2s!4v1744722386850!5m2!1svi!2s">
                                 Trà Sữa ToCoToCo Hàng Bông
 
                             </li>
@@ -173,8 +196,10 @@
                 </div>
                 <div class="p22">
                     <h3 style="padding-top: 5px;padding-bottom: 30px;">CÔNG TY CỔ PHẦN THƯƠNG MẠI JDD VIỆT NAM</h3>
-                    <p>Trụ sở chính: Ô số 02-NV26, Khu đô thị mới Bắc quốc lộ 32, Thị trấn Trạm Trôi, Huyện Hoài Đức, Hà Nội</p>
-                    <p>Giấy chứng nhận Đăng ký Kinh doanh số 0110596586 do Sở Kế hoạch và Đầu tư Thành phố Hà Nội cấp lần đầu ngày 10/01/2024</p>
+                    <p>Trụ sở chính: Ô số 02-NV26, Khu đô thị mới Bắc quốc lộ 32, Thị trấn Trạm Trôi, Huyện Hoài Đức, Hà
+                        Nội</p>
+                    <p>Giấy chứng nhận Đăng ký Kinh doanh số 0110596586 do Sở Kế hoạch và Đầu tư Thành phố Hà Nội cấp
+                        lần đầu ngày 10/01/2024</p>
                 </div>
                 <div class="p23">
                     <p class="p23-infor">Chúng tôi chỉ nhận thanh toán qua tiền mặt</p>
@@ -182,65 +207,9 @@
 
             </div>
         </div>
-        <script>
-            const items = document.querySelectorAll('.diachi-item');
-            const mapIframe = document.querySelector('.khungmap iframe');
-
-            items.forEach(item => {
-                item.addEventListener('click', () => {
-                    const newSrc = item.getAttribute('data-src');
-                    mapIframe.setAttribute('src', newSrc);
-                });
-            });
-
-            document.addEventListener('DOMContentLoaded', function() {
-                const registrationForm = document.getElementById('registrationForm');
-                const passwordInput = document.getElementById('password');
-                const validatePasswordInput = document.getElementById('validatePassword');
-
-                registrationForm.addEventListener('submit', function(event) {
-                    event.preventDefault(); // Ngăn chặn hành vi submit mặc định
-
-                    if (passwordInput.value !== validatePasswordInput.value) {
-                        alert('Mật khẩu nhập lại không khớp!');
-                        return;
-                    }
-
-                    const formData = new FormData(registrationForm);
-                    const data = {};
-                    formData.forEach((value, key) => {
-                        data[key] = value;
-                    });
-
-                    // Loại bỏ trường nhập lại mật khẩu khỏi dữ liệu gửi đi
-                    delete data.validatePassword;
-
-                    fetch('http://localhost:5000/api/auth/register', {
-                        method: 'POST',
-                        headers: {
-                            'Content-Type': 'application/json',
-                        },
-                        body: JSON.stringify(data),
-                    })
-                    .then(response => response.json())
-                    .then(responseData => {
-                        if (responseData.userId){
-                            console.log('Thành công:', responseData.userId);
-                            alert('Đăng ký thành công!');
-                            window.location.href = 'dangnhap.html';
-                        }else{
-                            alert('Đã có lỗi xảy ra trong quá trình đăng ký. Vui lòng thử lại sau.');
-                        }
-                    })
-                    .catch(error => {
-                        console.error('Lỗi:', error);
-                        alert('Đã có lỗi xảy ra trong quá trình đăng ký. Vui lòng thử lại sau.');
-                    });
-                });
-            });
-        </script>
-
     </div>
     </div>
+    <script src="../controller/dangky.js"></script>
 </body>
+
 </html>
