--- a/frontend/pages/quanli-donhang.html
+++ b/frontend/pages/quanli-donhang.html
@@ -1,104 +1,96 @@
 <!DOCTYPE html>
 <html lang="vi">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quản Lý Đơn Hàng</title>
-    <link rel="stylesheet" href="../assets/css/htql2.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link
-      rel="stylesheet"
-      href="../assets/font/themify-icons/themify-icons.css"
-    />
-  </head>
-  <body>
-    <!-- Header -->
-    <header class="header">
-      <div class="logo">
-        <span>&#9776; He Thong QuanLy</span>
-      </div>
-      <div class="admin">
-        <span>&#128100; ADMIN</span>
-      </div>
-    </header>
 
-    <div class="container">
-      <!-- Sidebar -->
-      <aside class="sidebar">
-        <ul>
-          <li><a href="quanli-sanpham.html">📂 Quản lý sản phẩm</a></li>
-          <li><a href="quanli-donhang.html">📦 Quản lý đơn hàng</a></li>
-          <li><a href="quanli-khachhang.html">👥 Quản lý khách hàng</a></li>
-          <li><a href="quanli-taikhoan.html">🔑 Quản lý tài khoản</a></li>
-          <li><a href="quanli-tintuc.html">🔑 Quản lý tin tức</a></li>
-        </ul>
-      </aside>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Quản Lý Đơn Hàng</title>
+  <link rel="stylesheet" href="../assets/css/htql2.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="../assets/font/themify-icons/themify-icons.css" />
+  <link rel="stylesheet" href="../assets/css/quanlidonhang.css" />
+</head>
 
-      <!-- Khu vực chính -->
-      <main class="main-content">
-        <h2>QUẢN LÍ ĐƠN HÀNG</h2>
-        <table>
+<body>
+  <!-- Header -->
+  <header class="header">
+    <div class="logo">
+      <span>&#9776; He Thong QuanLy</span>
+    </div>
+    <div class="admin">
+      <span>&#128100; ADMIN</span>
+    </div>
+  </header>
+
+  <div class="container">
+    <!-- Sidebar -->
+    <aside class="sidebar">
+      <ul>
+        <li><a href="quanli-sanpham.html">📂 Quản lý sản phẩm</a></li>
+        <li><a href="quanli-donhang.html">📦 Quản lý đơn hàng</a></li>
+        <li><a href="quanli-khachhang.html">👥 Quản lý khách hàng</a></li>
+        <li><a href="quanli-taikhoan.html">🔑 Quản lý tài khoản</a></li>
+        <li><a href="quanli-tintuc.html">🔑 Quản lý tin tức</a></li>
+      </ul>
+    </aside>
+
+    <!-- Khu vực chính -->
+    <main class="main-content">
+      <h2>QUẢN LÍ ĐƠN HÀNG</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>STT</th>
+            <th>Tên kh</th>
+            <th>email</th>
+            <th>địa chỉ</th>
+            <th>sdt</th>
+            <th>ghi chú</th>
+            <th>Chi tiết</th>
+            <th>Thời gian</th>
+            <th>Thành tiền</th>
+            <th>trạng thái</th>
+            <th>Hành động</th>
+          </tr>
+        </thead>
+        <tbody id="product-list">
+
+        </tbody>
+      </table>
+      <!-- Hiển thị doanh số -->
+    </main>
+  </div>
+  <div id="orderDetailModal" class="modal">
+
+    <div class="modal-content">
+      <div class="modal-header">
+        <h2>Chi tiết đơn hàng</h2>
+        <span class="close-button">&times;</span>
+      </div>
+      <div class="modal-body">
+        <table id="order-details-table">
           <thead>
             <tr>
-              <th>ID</th>
-              <th>Mã Đơn</th>
-              <th>Tên Sản Phẩm</th>
-              <th>Số Lượng</th>
-              <th>Đơn Giá</th>
-              <th>Thành Tiền</th>
-              <th>Trạng Thái</th>
+              <th>STT</th>
+              <th>Tên sản phẩm</th>
+              <th>Giá</th>
+              <th>Số lượng</th>
+              <th>Thành tiền</th>
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td>1</td>
-              <td>SP001</td>
-              <td>Trà ô long</td>
-              <td>1</td>
-              <td>600.000 VND</td>
-              <td>40.000</td>
-              <td>Chờ xử lí</td>
-            </tr>
-            <tr>
-              <td>2</td>
-              <td>SP002</td>
-              <td>Trà quất</td>
-              <td>3</td>
-              <td>600.000 VND</td>
-              <td>230.000</td>
-              <td>Chờ xử lí</td>
-            </tr>
-            <tr>
-              <td>3</td>
-              <td>SP005</td>
-              <td>Trà hồng ổi đào</td>
-              <td>4</td>
-              <td>600.000 VND</td>
-              <td>100.000</td>
-              <td>Chờ xử lí</td>
-            </tr>
-            <tr>
-              <td>4</td>
-              <td>SP004</td>
-              <td>Bạc xỉu</td>
-              <td>2</td>
-              <td>600.000 VND</td>
-              <td>300.000</td>
-              <td>Chờ xử lí</td>
-            </tr>
           </tbody>
         </table>
-
-        <!-- Hiển thị doanh số -->
-      </main>
+      </div>
+      <div class="modal-footer">
+        <button class="edit-button">Sửa đơn hàng</button>
+        <button class="cancel-button">Hủy</button>
+      </div>
     </div>
+  </div>
+  <script src="../controller/quanli-donhang.js"></script>
+</body>
 
-    <script src="script.js"></script>
-  </body>
 </html>
