done qli san pham

--- a/frontend/pages/quanli-donhang.html
+++ b/frontend/pages/quanli-donhang.html
@@ -85,7 +85,7 @@
         </table>
       </div>
       <div class="modal-footer">
-        <button class="edit-button">Sửa đơn hàng</button>
+        <!-- <button class="edit-button">Sửa đơn hàng</button> -->
         <button class="cancel-button">Hủy</button>
       </div>
     </div>
