--- a/frontend/pages/quanli-taikhoan.html
+++ b/frontend/pages/quanli-taikhoan.html
@@ -1,97 +1,60 @@
 <!DOCTYPE html>
 <html lang="vi">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quản Lý Đơn Hàng</title>
-    <link rel="stylesheet" href="../assets/css/htql2.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
-      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link
-      rel="stylesheet"
-      href="../assets/font/themify-icons/themify-icons.css"
-    />
-  </head>
-  <body>
-    <!-- Header -->
-    <header class="header">
-      <div class="logo">
-        <span>&#9776; He Thong QuanLy</span>
-      </div>
-      <div class="admin">
-        <span>&#128100; ADMIN</span>
-      </div>
-    </header>
 
-    <div class="container">
-      <!-- Sidebar -->
-      <aside class="sidebar">
-        <ul>
-          <li><a href="quanli-sanpham.html">📂 Quản lý sản phẩm</a></li>
-          <li><a href="quanli-donhang.html">📦 Quản lý đơn hàng</a></li>
-          <li><a href="quanli-khachhang.html">👥 Quản lý khách hàng</a></li>
-          <li><a href="quanli-taikhoan.html">🔑 Quản lý tài khoản</a></li>
-          <li><a href="quanli-tintuc.html">🔑 Quản lý tin tức</a></li>
-        </ul>
-      </aside>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hệ Thống Quản Lý</title>
+  <link rel="stylesheet" href="../assets/css/htql1.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="../assets/font/themify-icons/themify-icons.css" />
+</head>
 
-      <!-- Khu vực chính -->
-      <main class="main-content">
-        <h2>QUẢN LÍ TÀI KHOẢN</h2>
-        <table>
-          <thead>
-            <tr>
-              <th>Tên Tài Khoản</th>
-              <th>Mật Khẩu</th>
-              <th>Trạng Thái</th>
-              <th>Cấp Quyền</th>
-              <th>Quyền ADMIN</th>
-              <th>Quyền USER</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>Trà ô long</td>
-              <td>*******</td>
-              <td>Quét đèn thông minh thẻ hệ mở</td>
-              <td>ADMIN</td>
-              <td><input type="checkbox" checked /></td>
-              <td><input type="checkbox" checked /></td>
-            </tr>
-            <tr>
-              <td>Trà quất</td>
-              <td>*******</td>
-              <td>Quét đèn thông minh thẻ hệ mới</td>
-              <td>USER</td>
-              <td><input type="checkbox" checked /></td>
-              <td><input type="checkbox" checked /></td>
-            </tr>
-            <tr>
-              <td>Trà hồng đào</td>
-              <td>*******</td>
-              <td>Quét đèn thông minh thẻ hệ mới</td>
-              <td>USER</td>
-              <td><input type="checkbox" checked /></td>
-              <td><input type="checkbox" checked /></td>
-            </tr>
-            <tr>
-              <td>Bạc xỉu</td>
-              <td>*******</td>
-              <td>Quét đèn thông minh thẻ hệ mới</td>
-              <td>USER</td>
-              <td><input type="checkbox" checked /></td>
-              <td><input type="checkbox" checked /></td>
-            </tr>
-          </tbody>
-        </table>
-      </main>
+<body>
+  <header class="header">
+    <div class="logo">
+      <span>&#9776; He Thong QuanLy</span>
     </div>
+    <div class="admin">
+      <span>&#128100; ADMIN</span>
+    </div>
+  </header>
 
-    <script src="script.js"></script>
-  </body>
+  <div class="container">
+    <aside class="sidebar">
+      <ul>
+        <li><a href="quanli-sanpham.html">📂 Quản lý sản phẩm</a></li>
+        <li><a href="quanli-donhang.html">📦 Quản lý đơn hàng</a></li>
+        <li><a href="quanli-khachhang.html">👥 Quản lý khách hàng</a></li>
+        <li><a href="quanli-taikhoan.html">🔑 Quản lý tài khoản</a></li>
+        <li><a href="quanli-tintuc.html">🔑 Quản lý tin tức</a></li>
+      </ul>
+    </aside>
+
+    <main class="main-content">
+      <h2>QUẢN LÍ TÀI KHOẢN</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>STT</th>
+            <th>Họ tên</th>
+            <th>Email</th>
+            <th>Sdt</th>
+            <th>địa chỉ</th>
+            <th>tên tài khoản</th>
+            <th>vai trò</th>
+            <th>Hành động</th>
+          </tr>
+        </thead>
+        <tbody id="user-list"></tbody>
+      </table>
+    </main>
+  </div>
+  <script src="../controller/quanli-taikhoan.js"></script>
+</body>
+
 </html>
+
+<!-- //done -->
