done ql lien he

--- a/frontend/pages/quanli-lienhe.html
+++ b/frontend/pages/quanli-lienhe.html
@@ -44,36 +44,25 @@
                     <tr>
                         <th>Tên khách hàng</th>
                         <th>Tên tài khoản</th>
-                        <th>Liên hệ</th>
+                        <th>email</th>
+                        <th>SDT</th>
+                        <th>feedback</th>
                     </tr>
                 </thead>
                 <tbody id="product-list">
                     <tr>
                         <td>Nguyễn Văn A</td>
                         <td>nguyenvana</td>
+                        <td>nguyenvana@gmail</td>
+                        <td>08888214</td>
                         <td>Gọi lại giúp tôi sau 5 giờ chiều. Tôi muốn hỏi thêm về sản phẩm nước ép trái cây.</td>
-                    </tr>
-                    <tr>
-                        <td>Trần Thị B</td>
-                        <td>tranthib</td>
-                        <td>Tôi không thể đăng nhập vào tài khoản, vui lòng hỗ trợ sớm nhất có thể.</td>
-                    </tr>
-                    <tr>
-                        <td>Lê Văn C</td>
-                        <td>levanc</td>
-                        <td>Cho tôi xin thông tin chi tiết hơn về chương trình khuyến mãi tháng này.</td>
-                    </tr>
-                    <tr>
-                        <td>Phạm Thị D</td>
-                        <td>phamthid</td>
-                        <td>Tôi đã đặt hàng nhưng không nhận được email xác nhận. Xin kiểm tra giúp tôi.</td>
                     </tr>
                 </tbody>
             </table>
         </main>
     </div>
 
-    <script src="script.js"></script>
+    <script src="../controller/quanli-lienhe.js"></script>
 </body>
 
 </html>
