--- a/frontend/pages/thongtincanhan.html
+++ b/frontend/pages/thongtincanhan.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Band</title>
     <link rel="stylesheet" href="../assets/css/thongtincanhan.css">
+    <link rel="stylesheet" href="../assets/css/trangchu.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -15,7 +16,6 @@
     <link rel="stylesheet" href="../assets/font/themify-icons/themify-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
 </head>
 
 <body>
@@ -32,26 +32,35 @@
                 <div class="t3-nav-item"><a href="#">LIÊN HỆ</a></div>
                 <div class="t3-nav-item"><a href="hethongcuahang.html">HỆ THỐNG CỬA HÀNG</a></div>
             </div>
-            <div class="a1">
-                <div class="t3-admin">
-                    <div class="t3-admin-box">
-
-
-                    </div>
+            <div class="t1-trong">
+            </div>
+            <div class="t1-search-login">
+                <div class="t1-timkiem">
+                    <i style="color: white; margin-right: 10px;" class="fa-solid fa-magnifying-glass"></i>
+                    <input class="t1-timkiem1" type="text" placeholder="Tìm kiếm">
                 </div>
-                <div class="dangxuat">
-                    <button class="t1-dangxuat t1-nut-hover">Đăng Xuất</button>
+                <div id="login-buttons">
+                    <button onclick="window.location.href='dangnhap.html'" class="t1-dangnhap t1-nut-hover">Đăng
+                        Nhập</button>
+                    <button onclick="window.location.href='dangki.html'" class="t1-dangki t1-nut-hover">Đăng Ký</button>
+                </div>
+                <div id="user-info" style="display: none;">
+                    <button class="t1-dangnhap" id="username-display"></button>
+                    <button id="logout-button" class="t1-dangki t1-nut-hover">Đăng xuất</button>
                 </div>
             </div>
-
         </div>
         <div class="t5-body pt-5 pb-5">
-            <div class="profile-container">
+            <div class="profile-container" id="profile-container">
                 <h2>Thông Tin Cá Nhân</h2>
+                <div class="info-group">
+                    <label>Họ tên:</label>
+                    <p>nguyenvana</p>
+                </div>
 
                 <div class="info-group">
                     <label>Tên tài khoản:</label>
-                    <p>Nguyễn Văn A</p>
+                    <p>username</p>
                 </div>
 
                 <div class="info-group">
@@ -67,16 +76,6 @@
                 <div class="info-group">
                     <label>Địa chỉ:</label>
                     <p>123 Đường ABC, Quận 1, TP.HCM</p>
-                </div>
-
-                <div class="info-group">
-                    <label>Username:</label>
-                    <p>nguyenvana</p>
-                </div>
-
-                <div class="info-group">
-                    <label>Password:</label>
-                    <p>********</p>
                 </div>
             </div>
 
@@ -221,6 +220,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+
+    <script src="../controller/thongtincanhan.js"></script>
 </body>
 
 </html>
