xem, sua don hang fixed

--- a/frontend/pages/quanli-sanpham.html
+++ b/frontend/pages/quanli-sanpham.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hệ Thống Quản Lý</title>
   <link rel="stylesheet" href="../assets/css/htql1.css" />
+  <link rel="stylesheet" href="../assets/css/htql5.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -49,7 +50,20 @@
             <th>Hành động</th>
           </tr>
         </thead>
-        <tbody id="product-list"></tbody>
+        <tbody id="product-list">
+          <h3>Không có sản phẩm nào</h3>
+          <!-- <td>1</td>
+          <td>trà sữa trân châu đường đen</td>
+          <td>trà sữa</td>
+          <td>20.000</td>
+          <td>10%</td>
+          <td>trà sữa trân châu đường đen</td>
+          <td><img src="../assets/img/tra-sua-tran-chau-duong-den.jpg" alt="trà sữa trân châu đường đen" /></td>
+          <td>
+            <button class="edit">Sửa</button>
+            <button class="save">Lưu</button>
+            <button class="delete">Xóa</button> -->
+        </tbody>
       </table>
     </main>
   </div>
