done phan quyen ben phan user

--- a/frontend/pages/chitietthanhtoan.html
+++ b/frontend/pages/chitietthanhtoan.html
@@ -25,6 +25,7 @@
                 <div class="t3-nav-item"><a href="trangchu.html">TRANG CHỦ</a></div>
                 <div class="t3-nav-item"><a href="gioithieu.html">GIỚI THIỆU</a></div>
                 <div class="t3-nav-item"><a href="sanpham.html">SẢN PHẨM</a></div>
+                <div class="t3-nav-item"><a href="donhangcuatoi.html">ĐƠN HÀNG CỦA TÔI</a></div>
                 <div class="t3-nav-item"><a href="tintuc.html">TIN TỨC</a></div>
                 <div class="t3-nav-item"><a href="#">LIÊN HỆ</a></div>
                 <div class="t3-nav-item"><a href="hethongcuahang.html">HỆ THỐNG CỬA HÀNG</a></div>
