--- a/frontend/pages/dangki.html
+++ b/frontend/pages/dangki.html
@@ -25,7 +25,8 @@
                 <div class="t3-nav-item"><a href="trangchu.html">TRANG CHỦ</a></div>
                 <div class="t3-nav-item"><a href="gioithieu.html">GIỚI THIỆU</a></div>
                 <div class="t3-nav-item"><a href="sanpham.html">SẢN PHẨM</a></div>
-                <div class="t3-nav-item"><a href="#">TIN TỨC</a></div>
+                <div class="t3-nav-item"><a href="donhangcuatoi.html">ĐƠN HÀNG CỦA</a></div>
+                <div class="t3-nav-item"><a href="tintuc.html">TIN TỨC</a></div>
                 <div class="t3-nav-item"><a href="lienhe.html">LIÊN HỆ</a></div>
                 <div class="t3-nav-item"><a href="hethongcuahang.html">HỆ THỐNG CỬA HÀNG</a></div>
 
