--- a/frontend/pages/lienhe.html
+++ b/frontend/pages/lienhe.html
@@ -22,21 +22,17 @@
                 <img src="../assets/img/logo.png" alt="" class="t1-logo-quan">
             </div>
             <div class="t1-nav">
-                <div class="t1-nav-item"><a href="#">TRANG CHỦ</a></div>
+                <div class="t1-nav-item"><a href="trangchu.html">TRANG CHỦ</a></div>
                 <div class="t1-nav-item"><a href="gioithieu.html">GIỚI THIỆU</a></div>
                 <div class="t1-nav-item"><a href="sanpham.html">SẢN PHẨM</a></div>
+                <div class="t3-nav-item"><a href="donhangcuatoi.html">ĐƠN HÀNG CỦA TÔI</a></div>
                 <div class="t1-nav-item"><a href="tintuc.html">TIN TỨC</a></div>
                 <div class="t1-nav-item"><a href="lienhe.html">LIÊN HỆ</a></div>
                 <div class="t1-nav-item"><a href="hethongcuahang.html">HỆ THỐNG CỬA HÀNG</a></div>
 
             </div>
-            <div class="t1-trong">
-            </div>
+
             <div class="t1-search-login">
-                <div class="t1-timkiem">
-                    <i style="color: white; margin-right: 10px;" class="fa-solid fa-magnifying-glass"></i>
-                    <input class="t1-timkiem1" type="text" placeholder="Tìm kiếm">
-                </div>
                 <div id="login-buttons">
                     <button onclick="window.location.href='dangnhap.html'" class="t1-dangnhap t1-nut-hover">Đăng
                         Nhập</button>
