--- a/frontend/pages/sanpham.html
+++ b/frontend/pages/sanpham.html
@@ -24,36 +24,29 @@
         <div class="t3-nav-item"><a href="trangchu.html">TRANG CHỦ</a></div>
         <div class="t3-nav-item"><a href="gioithieu.html">GIỚI THIỆU</a></div>
         <div class="t3-nav-item"><a href="#">SẢN PHẨM</a></div>
+        <div class="t3-nav-item"><a href="donhangcuatoi.html">ĐƠN HÀNG CỦA TÔI</a></div>
         <div class="t3-nav-item"><a href="tintuc.html">TIN TỨC</a></div>
         <div class="t3-nav-item"><a href="lienhe.html">LIÊN HỆ</a></div>
         <div class="t3-nav-item">
           <a href="hethongcuahang.html">HỆ THỐNG CỬA HÀNG</a>
         </div>
       </div>
-      <div class="a1">
-        <div class="t1-trong">
+      <div class="t1-search-login">
+        <div id="login-buttons">
+          <button onclick="window.location.href='dangnhap.html'" class="t1-dangnhap t1-nut-hover">Đăng
+            Nhập</button>
+          <button onclick="window.location.href='dangki.html'" class="t1-dangki t1-nut-hover">Đăng Ký</button>
         </div>
-        <div class="t1-search-login">
-          <div class="t1-timkiem">
-            <i style="color: white; margin-right: 10px;" class="fa-solid fa-magnifying-glass"></i>
-            <input class="t1-timkiem1" type="text" placeholder="Tìm kiếm">
-          </div>
-          <div id="login-buttons">
-            <button onclick="window.location.href='dangnhap.html'" class="t1-dangnhap t1-nut-hover">Đăng
-              Nhập</button>
-            <button onclick="window.location.href='dangki.html'" class="t1-dangki t1-nut-hover">Đăng Ký</button>
-          </div>
-          <div id="user-info" style="display: none;">
-            <button class="t1-dangnhap" id="username-display"></button>
-            <button id="logout-button" class="t1-dangki t1-nut-hover">Đăng xuất</button>
-          </div>
+        <div id="user-info" style="display: none;">
+          <button class="t1-dangnhap" id="username-display"></button>
+          <button id="logout-button" class="t1-dangki t1-nut-hover">Đăng xuất</button>
         </div>
       </div>
     </div>
 
     <div id="t3-timkiem">
-      <i style="color: #a29d9d; margin-right: 10px; font-size: 20px" class="fa-solid fa-magnifying-glass"></i>
-      <input class="t3-timkiem1" type="text" placeholder="Tìm kiếm sản phẩm" />
+      <!-- <i style="color: #a29d9d; margin-right: 10px; font-size: 20px" class="fa-solid fa-magnifying-glass"></i>
+      <input class="t3-timkiem1" type="text" placeholder="Tìm kiếm sản phẩm" /> -->
     </div>
     <div id="t3-body">
       <div class="t3-info-body">
