--- a/frontend/pages/trangchu.html
+++ b/frontend/pages/trangchu.html
@@ -22,18 +22,14 @@
                 <div class="t1-nav-item"><a href="#">TRANG CHỦ</a></div>
                 <div class="t1-nav-item"><a href="gioithieu.html">GIỚI THIỆU</a></div>
                 <div class="t1-nav-item"><a href="sanpham.html">SẢN PHẨM</a></div>
+                <div class="t1-nav-item"><a href="donhangcuatoi.html">ĐƠN HÀNG CỦA TÔI</a></div>
                 <div class="t1-nav-item"><a href="tintuc.html">TIN TỨC</a></div>
                 <div class="t1-nav-item"><a href="lienhe.html">LIÊN HỆ</a></div>
                 <div class="t1-nav-item"><a href="hethongcuahang.html">HỆ THỐNG CỬA HÀNG</a></div>
 
             </div>
-            <div class="t1-trong">
-            </div>
+
             <div class="t1-search-login">
-                <div class="t1-timkiem">
-                    <i style="color: white; margin-right: 10px;" class="fa-solid fa-magnifying-glass"></i>
-                    <input class="t1-timkiem1" type="text" placeholder="Tìm kiếm">
-                </div>
                 <div id="login-buttons">
                     <button onclick="window.location.href='dangnhap.html'" class="t1-dangnhap t1-nut-hover">Đăng
                         Nhập</button>
@@ -97,6 +93,7 @@
                         <li class="menu-item"><a href="trangchu.html">Trang chủ</a></li>
                         <li class="menu-item"><a href="gioithieu.html">Giới thiệu</a></li>
                         <li class="menu-item"><a href="sanpham.html">Sản phẩm</a></li>
+                        <div class="t3-nav-item"><a href="donhangcuatoi.html">ĐƠN HÀNG CỦA TÔI</a></div>
                         <li class="menu-item"><a href="tintuc.html">Tin tức</a></li>
                         <li class="menu-item"><a href="lienhe.html">Liên hệ</a></li>
                         <li class="menu-item"><a href="hethongcuahang.html">Hệ thống cửa hàng</a>
