--- a/frontend/pages/quanli-taikhoan.html
+++ b/frontend/pages/quanli-taikhoan.html
@@ -20,6 +20,8 @@
     </div>
     <div class="admin">
       <span>&#128100; ADMIN</span>
+      <span>&#128100; <a href="trangchu.html">VỀ TRANG CHỦ</a></span>
+      <span id="logout-btn">&#128100; ĐĂNG XUẤT</span>
     </div>
   </header>
 
