--- a/frontend/pages/quanli-donhang.html
+++ b/frontend/pages/quanli-donhang.html
@@ -33,7 +33,7 @@
       <ul>
         <li><a href="quanli-sanpham.html">📂 Quản lý sản phẩm</a></li>
         <li><a href="quanli-donhang.html">📦 Quản lý đơn hàng</a></li>
-        <li><a href="quanli-lienhe.html">👥 Quản lý liên hệ</a></li>
+        <li><a href="quanli-lienhe.html">👥 Quản lý phản hồi</a></li>
         <li><a href="quanli-taikhoan.html">🔑 Quản lý tài khoản</a></li>
         <li><a href="quanli-tintuc.html">🔑 Quản lý tin tức</a></li>
       </ul>
