--- a/frontend/pages/quanli-lienhe.html
+++ b/frontend/pages/quanli-lienhe.html
@@ -21,6 +21,8 @@
         </div>
         <div class="admin">
             <span>&#128100; ADMIN</span>
+            <span>&#128100; <a href="trangchu.html">VỀ TRANG CHỦ</a></span>
+            <span id="logout-btn">&#128100; ĐĂNG XUẤT</span>
         </div>
     </header>
 
@@ -28,11 +30,11 @@
         <!-- Sidebar -->
         <aside class="sidebar">
             <ul>
-                <li><a href="http://127.0.0.1:5500/quanli-sanpham.html">📂 Quản lý sản phẩm</a></li>
-                <li><a href="http://127.0.0.1:5500/quanli-donhang.html">📦 Quản lý đơn hàng</a></li>
-                <li><a href="http://127.0.0.1:5500/quanli-khachhang.html">👥 Quản lý khách hàng</a></li>
-                <li><a href="http://127.0.0.1:5500/quanli-taikhoan.html">🔑 Quản lý tài khoản</a></li>
-                <li><a href="http://127.0.0.1:5500/quanli-tintuc.html">🔑 Quản lý tin tức</a></li>
+                <li><a href="quanli-sanpham.html">📂 Quản lý sản phẩm</a></li>
+                <li><a href="quanli-donhang.html">📦 Quản lý đơn hàng</a></li>
+                <li><a href="quanli-lienhe.html">👥 Quản lý phản hồi</a></li>
+                <li><a href="quanli-taikhoan.html">🔑 Quản lý tài khoản</a></li>
+                <li><a href="quanli-tintuc.html">🔑 Quản lý tin tức</a></li>
             </ul>
         </aside>
 
