--- a/frontend/pages/quanli-tintuc.html
+++ b/frontend/pages/quanli-tintuc.html
@@ -21,6 +21,8 @@
     </div>
     <div class="admin">
       <span>&#128100; ADMIN</span>
+      <span>&#128100; <a href="trangchu.html">VỀ TRANG CHỦ</a></span>
+      <span id="logout-btn">&#128100; ĐĂNG XUẤT</span>
     </div>
   </header>
 
@@ -30,7 +32,7 @@
       <ul>
         <li><a href="quanli-sanpham.html">📂 Quản lý sản phẩm</a></li>
         <li><a href="quanli-donhang.html">📦 Quản lý đơn hàng</a></li>
-        <li><a href="quanli-khachhang.html">👥 Quản lý khách hàng</a></li>
+        <li><a href="quanli-lienhe.html">👥 Quản lý liên hệ</a></li>
         <li><a href="quanli-taikhoan.html">🔑 Quản lý tài khoản</a></li>
         <li><a href="quanli-tintuc.html">🔑 Quản lý tin tức</a></li>
       </ul>
